upload avatar nie działa

--- a/src/app/components/main/account-view/account-view.component.scss
+++ b/src/app/components/main/account-view/account-view.component.scss
@@ -10,7 +10,7 @@ body{margin-top:20px;
     }
     .card {
         box-shadow: 0 0.15rem 1.75rem 0 rgb(33 40 50 / 15%);
-        background-color: #0bb397;
+        background-color: aquamarine;
     }
     .card .card-header {
         font-weight: 500;
@@ -58,6 +58,4 @@ body{margin-top:20px;
         margin-left: 1rem;
         margin-right: 1rem;
     }
-    .card mb-4 mb-xl-0{
-
-    }
+  
