--- a/src/app/components/main/account-view/account-view.component.html
+++ b/src/app/components/main/account-view/account-view.component.html
@@ -7,7 +7,7 @@
                 <div class="card-body text-center">
                      <img
                     class="img-account-profile rounded-circle mb-2"
-                    [src]="'data:image/jpeg,{{gowno}}'"
+                    [src]="avatarUrl"
                     alt=""
                   /> 
                     <div class="small font-italic text-muted mb-4">JPG lub PNG nie większe niż 5 MB</div>
