--- a/src/app/components/main/projectlist/projectlist.component.html
+++ b/src/app/components/main/projectlist/projectlist.component.html
@@ -1,5 +1,5 @@
 <div class="projectList">
-  <div class="cards" *ngFor="let project of projects">
+  <div class="cards" *ngFor="let project of projectCards">
     <app-card-project class="card" [project]="project" ></app-card-project>
   </div>
 </div>
