--- a/src/app/components/main/kanban/kanban.component.html
+++ b/src/app/components/main/kanban/kanban.component.html
@@ -7,33 +7,31 @@
                 <div class="connectDiv">
                     <div class="smallDiv">
                         <mat-form-field appearance="outline">
-                            <mat-label>Task Name</mat-label>
-                            <input formControlName="item" matInput>
+                            <mat-label>Tytuł taska</mat-label>
+                            <input formControlName="title" matInput name="title">
                             <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
                             <!-- <mat-hint>Add task name</mat-hint> -->
                           </mat-form-field>
-                          <mat-form-field appearance="outline">
-                            <mat-label>Task Name</mat-label>
-                            <input formControlName="item" matInput>
-                            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-                            <!-- <mat-hint>Add task name</mat-hint> -->
+                          <mat-form-field class="example-user-input">
+                            <mat-label>Priorytet</mat-label>
+                            <mat-select [formControl]="priorityPosition" formControlName="priority">
+                              <mat-option *ngFor="let positionOption of priorityPositionOptions" [value]="positionOption">
+                                {{positionOption}}
+                              </mat-option>
+                            </mat-select>
                           </mat-form-field>
-                          <mat-form-field appearance="outline">
-                            <mat-label>Task Name</mat-label>
-                            <input formControlName="item" matInput>
-                            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-                            <!-- <mat-hint>Add task name</mat-hint> -->
-                          </mat-form-field>
-                          <mat-form-field appearance="outline">
-                            <mat-label>Task Name</mat-label>
-                            <input formControlName="item" matInput>
-                            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-                            <!-- <mat-hint>Add task name</mat-hint> -->
+                          <mat-form-field class="example-user-input">
+                            <mat-label>Przypisz użytkownika</mat-label>
+                            <mat-select [formControl]="userPosition" formControlName="user">
+                              <mat-option *ngFor="let positionOption of userPositionOptions" [value]="positionOption">
+                                {{positionOption.email}}
+                              </mat-option>
+                            </mat-select>
                           </mat-form-field>
                     </div>
                     <div class="bigDiv">
                         <mat-form-field class="description">
-                            <textarea matInput placeholder="Opis projektu" name="projectDescription" required></textarea>
+                            <textarea matInput placeholder="Opis projektu" name="projectDescription" formControlName="description"required></textarea>
                             <mat-error>Opis projektu jest wymagany.</mat-error>
                           </mat-form-field>
                     </div>
@@ -55,11 +53,8 @@
               <div class="example-container">
                 <h2 class="head-title">{{ column.state }} <span *ngIf="column.tasks.length > 0"> : {{ column.tasks.length }}</span></h2>
                 <div cdkDropList [cdkDropListData]="column.tasks" class="example-list" (cdkDropListDropped)="drop($event)">
-                  <div class="example-box" *ngFor="let item of column.tasks; let i = index" cdkDrag>{{ item.description }}
-                    <div class="box">
-                      <button mat-icon-button color="warn" (click)="deleteTask(i)"><mat-icon>delete</mat-icon></button>
-                      <button mat-icon-button color="black" (click)="onEdit(item, i)"><mat-icon>edit</mat-icon></button>
-                    </div>
+                  <div class="example-box" *ngFor="let item of column.tasks; let i = index" cdkDrag (click)="goTotask(item.id)" style="margin-bottom: 5px; margin-top: 5px;">
+                    {{ item.title }}
                   </div>
                 </div>
               </div>
