--- a/src/app/components/main/task/task.component.html
+++ b/src/app/components/main/task/task.component.html
@@ -4,18 +4,19 @@
         <mat-card class="example-card">
             <mat-card-header>
               <mat-card-title>{{ task.title }}</mat-card-title>
-              <mat-card-subtitle>Nazwa sprintu</mat-card-subtitle>
+              <mat-card-subtitle>Priorytete zadania: {{ task.priority }}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
-              <p>{{ task.description }}</p>
+              Stan zadania : {{task.state}}
             </mat-card-content>
             <mat-card-actions>
               <button matToolTip="Dodaj" (click)="openEditSprintComponent('250ms', '0ms')" mat-button>Edit task</button>
+              <button matToolTip="Usun" (click)="deleteTask(task.id)" mat-button style="background-color: aquamarine; color: black;">Delete Task</button>
             </mat-card-actions>
           </mat-card>
     </div>
     <div class="content-tile">
-      <h2>Opis zadania:</h2>
+      <h2>Opis zadania</h2>
       <hr/>
       {{ task.description }}
     </div>
@@ -25,16 +26,16 @@
           <div class="col-12 custom-col">
             <div class="card text-dark">
               <div class="card-body p-4">
-                <h4 class="mb-0">Recent comments</h4>
+                <h4 class="mb-0">Ostatnie komentarze</h4>
                 <!-- <div class="d-flex align-items-center mb-4 pb-2">
                   <p style="color: #c7c7c7;" class="fw-light mb-0">Latest Comments section by users</p>
                   <button type="button" class="btn btn-info ms-auto">Add comment</button>
                 </div> -->
-                <p style="color: #c7c7c7;" class="fw-light mb-4 pb-2 ">Latest Comments section by users</p>
+                <p style="color: #c7c7c7;" class="fw-light mb-4 pb-2 ">Sekcja komentarzy</p>
     
                 <div *ngFor="let comment of commentsTask" class="d-flex flex-start comment-container">
-                  <img class="rounded-circle shadow-1-strong me-3"
-                    src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(23).webp" alt="avatar" width="60"
+                  <img class="img-account-profile rounded-circle mb-2"
+                    src="https://www.w3schools.com/w3css/img_avatar3.png" alt="https://www.w3schools.com/w3css/img_avatar3.png" width="60"
                     height="60" />
                   <div>
                     <h6 class="fw-bold mb-2">{{ comment.createdBy }}</h6>
@@ -42,17 +43,17 @@
                       <p style="color: #c7c7c7;" class="mb-0">
                         <ng-container *ngIf="isDateEqual(comment.createdDate, comment.lastModifiedDate)">
                           {{ comment.createdDate | date: 'yyyy-MM-dd HH:mm' }}
-                          <span class="badge bg-success">New</span>
+                          <span class="badge bg-success">Nowy</span>
                         </ng-container>
                         <ng-container *ngIf="!isDateEqual(comment.createdDate, comment.lastModifiedDate)">
                           {{ comment.lastModifiedDate | date: 'yyyy-MM-dd HH:mm' }}
-                          <span class="badge bg-primary">Edited</span>
+                          <span class="badge bg-primary">Edycja</span>
                         </ng-container>
                       </p>
                       
-                      <a href="#!" class="link-muted"><i class="fas fa-pencil-alt ms-2"></i></a>
+                      <!-- <a href="#!" class="link-muted"><i class="fas fa-pencil-alt ms-2"></i></a>
                       <a href="#!" class="link-muted"><i class="fas fa-redo-alt ms-2"></i></a>
-                      <a href="#!" class="link-muted"><i class="fas fa-heart ms-2"></i></a>
+                      <a href="#!" class="link-muted"><i class="fas fa-heart ms-2"></i></a> -->
                     </div>
                     <p class="mb-0">
                       {{ comment.content }}
@@ -61,10 +62,10 @@
 
                 <form class="mt-4">
                   <div class="mb-3">
-                    <label for="commentInput" class="form-label">Add comment</label>
+                    <label for="commentInput" class="form-label">Dodaj komentarz</label>
                     <textarea class="form-control" id="commentInput" rows="3" style="resize: none;background-color: #303030;"></textarea>
                   </div>
-                  <button type="button" class="btn btn-primary" (click)="addComment()">Submit</button>
+                  <button type="button" class="btn btn-primary" (click)="addComment()" style="background-color: aquamarine; color: black;">Wyślij</button>
                 </form>
                 
                 
@@ -105,7 +106,6 @@
           <h2>Reporter</h2>
           <div class="d-flex align-items-center">
             <p>Username: {{ reporter.email }}</p>
-            <b-avatar class="mr-2 header-avatar"></b-avatar>
           </div>
         </div>
       </div>
@@ -114,7 +114,6 @@
           <h2>Assigned</h2>
           <div class="d-flex align-items-center">
             <p>Username: {{ assigned.email }}</p>
-            <b-avatar class="mr-2 header-avatar"></b-avatar>
           </div>
         </div>
       </div>
