--- a/src/app/components/main/task/task.component.html
+++ b/src/app/components/main/task/task.component.html
@@ -10,7 +10,7 @@
               Stan zadania : {{task.state}}
             </mat-card-content>
             <mat-card-actions>
-              <button matToolTip="Dodaj" (click)="openEditSprintComponent('250ms', '0ms')" mat-button>Edit task</button>
+              <!-- <button matToolTip="Dodaj" (click)="openEditSprintComponent('250ms', '0ms')" mat-button>Edit task</button> -->
               <button matToolTip="Usun" (click)="deleteTask(task.id)" mat-button style="background-color: aquamarine; color: black;">Delete Task</button>
             </mat-card-actions>
           </mat-card>
